# python-project-83

./: README.md  database.py  database.sql  makefile  pyproject.toml  query.sql
page_analyzer/: app.py  db.py  utils.py
page_analyzer/templates/: index.html  url.html  urls.html
