[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anna Kudriaeva <anna.kudriaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
