[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anna Kudriaeva <anna.kudriaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
jinja2 = "^3.1.4"
psycopg2 = "^2.9.9"
validators = "^0.33.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
